v2025.06.24
===========
* Promote 2025.2 builds to stable #7740
* Do not mark execution root as dirty #7715
* Use relativize in BlazePackage.getPackageRelativePath #7728

v2025.06.10
===========
* feat: ability to configure python debug session flags #7656
* fix: Fixing removing incorectly detected iml file #7726
* fix: CLion: Replace VFS in HeaderRootTrimmer #7701

v2025.05.27
===========
* Project data directory is marked via exclusion patterns #7641
* Fixes for improperly started bazel process in run configurations #7691, #7692 (addressing #7623 #7648 #7682)

v2025.05.13
===========
* Fix annotation_processing in fast_build aspect #7643
* Revert "Make run configurations configurable (#7275)" #7659

v2025.04.29
===========
Fixes:
* Run sync with --skip_incompatible_explicit_targets #7617
* Remove references to java_common from aspects #7615

v2025.04.15
===========
Fixes:
* CLion fix run configuration #7595
* clion: fix CNFE for nova mode #7599
Fixed issues:
* IllegalArgumentException: Not a valid label, no target name found #7586
* Debugging not working while Testing C++ Project #7519
* No output artifacts found when debugging a Python target #7552

v2025.04.01
===========
Fixes:
* CLion Bazel 9 compatability fixes #7455
* Make ProjectOpenProcessors no strong info holder by default in CLion #7493
AOSP updates:
* [AOSP-pick] Make BuildArtifactCache an independent service #7459
* [AOSP-pick] Query sync cache invalidator #7480
* [AOSP-pick] ASwB can always follow required proto dependencies #7490
* [AOSP-pick] Fix project definition serialization #7498
* [AOSP-pick] Remove fetching configMnemonic from BEP event as its calculated from artifact prefix path #7500
* [AOSP-pick] Add true dependency graph to java-info.txt files #7506
* [AOSP-pick] Store output xml files as OutputArtifact instead of BlazeArtifact in BlazeTestResult #7507
* [AOSP-pick] Add/Update getLocalFiles method to support both BlazeArtifact and OutputArtifact type artifacts #7508